# modules_libsyshook

./: CMakeLists.txt  EFIDroid.ini  gen_syscall_header
include/: syshook.h
include/syshook/: list.h  syscalls.h
include_private/: common.h
include_private/syshook/private/: arch.h  common.h
src/: defaults.c  main.c  syshook.c
src/arch/arm/: arch.c  injections.S
src/arch/arm64/: arch.c  injections.S
